# decaf377

./: CHANGELOG.md  Cargo.toml  README.md  ristretto.sage  sqrt_alg.sage  sqrt_algorithms.sage  sqrt_algs.sage
.config/: nextest.toml
.github/workflows/: rust.yml
benches/: sqrt.rs
proptest-regressions/: invsqrt.txt
proptest-regressions/fields/fp/: arkworks.txt
proptest-regressions/fields/fq/: arkworks.txt
proptest-regressions/fields/fr/: arkworks.txt
proptest-regressions/fields/u64/fp/: arkworks.txt
src/: arkworks_ext.rs  bls12_377.rs  constants.rs  element.rs  elligator.rs  encoding.rs  error.rs  field_ext.rs  fields.rs  fr_ext.rs  groth16.rs  group.rs  invsqrt.rs  lib.rs  main.rs  on_curve.rs  ops.rs  proof.rs  r1cs.rs  rand.rs  scalar.rs  serialize.rs  sign.rs
src/ark_curve/: bls12_377.rs  constants.rs  edwards.rs  element.rs  elligator.rs  encoding.rs  error.rs  invsqrt.rs  mod.rs  on_curve.rs  ops.rs  r1cs.rs  rand.rs  serialize.rs
src/ark_curve/element/: affine.rs  projective.rs
src/ark_curve/ops/: affine.rs  projective.rs
src/ark_curve/r1cs/: element.rs  fqvar_ext.rs  inner.rs  lazy.rs  ops.rs
src/element/: affine.rs  projective.rs
src/fields/: constants.rs  fp.rs  fq.rs  fr.rs  u32.rs  u64.rs
src/fields/fp/: arkworks.rs  ops.rs  u32.rs  u64.rs
src/fields/fp/arkworks/: arkworks.rs
src/fields/fp/u32/: arkworks_constants.rs  fiat.rs  wrapper.rs
src/fields/fp/u64/: arkworks_constants.rs  wrapper.rs
src/fields/fq/: arkworks.rs  ops.rs  u32.rs  u64.rs
src/fields/fq/arkworks/: arkworks.rs
src/fields/fq/u32/: arkworks_constants.rs  fiat.rs  wrapper.rs
src/fields/fq/u64/: arkworks_constants.rs  wrapper.rs
src/fields/fr/: arkworks.rs  ops.rs  u32.rs  u64.rs
src/fields/fr/arkworks/: arkworks.rs
src/fields/fr/u32/: arkworks_constants.rs  fiat.rs  wrapper.rs
src/fields/fr/u64/: arkworks_constants.rs  wrapper.rs
src/fields/u32/: fr.rs
src/fields/u32/fp/: arkworks.rs  fiat.rs  wrapper.rs
src/fields/u32/fq/: fiat.rs  wrapper.rs
src/fields/u32/fr/: fiat.rs  wrapper.rs
src/fields/u64/: fp.rs
src/fields/u64/fp/: arkworks.rs  fiat.rs  wrapper.rs
src/fields/u64/fq/: arkworks.rs  fiat.rs  wrapper.rs
src/fields/u64/fr/: arkworks.rs  fiat.rs  wrapper.rs
src/min_curve/: constants.rs  element.rs  encoding.rs  invsqrt.rs  mod.rs  ops.rs
src/ops/: affine.rs  projective.rs
src/r1cs/: element.rs  fqvar_ext.rs  gadget.rs  inner.rs  lazy.rs  ops.rs
src/smol_curve/: constants.rs  element.rs  encoding.rs  invsqrt.rs  mod.rs  ops.rs
tests/: encoding.proptest-regressions  encoding.rs  groth16_gadgets.proptest-regressions  groth16_gadgets.rs  operations.rs
tests/test_vectors/: add_assign_add_vk.param  compression_vk.param  decompression_vk.param  discrete_log_vk.param  elligator_vk.param  negation_vk.param  public_element_input_vk.param
utils/: field_properties.py  frobenius_coeff_fp12_c1.txt  frobenius_coeff_fp6_c1.txt  frobenius_coeff_fp6_c2.txt  g2_generator.txt
