[package]
name = "decaf377"
version = "0.4.1"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>", "redshiftzero <jen@penumbralabs.xyz>"]
description = "A prime-order group designed for use in SNARKs over BLS12-377"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
hex = "0.4"
num-bigint = "0.4"
once_cell = "1.8"
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1.0"
ark-relations = "0.4"
ark-r1cs-std = { version = "0.4", optional=true, default-features=false }
ark-std = { version = "0.4", default-features=false }
ark-ec = { version = "0.4", default-features=false }
ark-ff =  { version = "0.4", default-features=false }
ark-serialize = "0.4"
ark-bls12-377 = "0.4"
ark-ed-on-bls12-377 = { version = "0.4", features = ["r1cs"] }
ark-groth16 = { version = "0.4", default-features=false, optional=true }
ark-snark = { version = "0.4", optional=true }
zeroize = "1.4"

# This matches what ark-std (a library for no_std compatibility) does, having
# a default feature of std - without the ark-std std feature, decaf377 doesn't
# compile
[features]
default = ["std"]
std = ["ark-std/std"]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-groth16/parallel", "ark-std/parallel", "ark-r1cs-std/parallel"]
r1cs = ["ark-r1cs-std", "ark-groth16", "ark-snark"]

[dev-dependencies]
proptest = "1"
criterion = { version = "0.3", features=["html_reports"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand_chacha = "0.3"

[[test]]
name = "groth16_gadgets"
required-features = ["r1cs"]

[[bench]]
name = "sqrt"
harness = false
